--- a/ms-spring-rental/src/main/resources/application.properties
+++ b/ms-spring-rental/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=rental
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/rental
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username=admin
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
@@ -26,4 +26,6 @@ security.jwt.secret-key=3cfa76ef14937c1c0ea519f8fc057a80fcd04a7420f8e8bcd0a7567c
 security.jwt.expiration-time=14400000
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui
+#for uploading images
+file.upload-dir=/home/lilaje/workspaces/rental/git/images
 
