--- a/qodana.yaml
+++ b/qodana.yaml
@@ -4,3 +4,5 @@ profile:
   name: qodana.recommended
 include:
   - name: CheckDependencyLicenses
+coverage:
+  path: ms-spring-rental/target/site/jacoco
