--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           pr-mode: false
         env:
-          QODANA_TOKEN: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJwcm9qZWN0IjoiM2VrWDUiLCJvcmdhbml6YXRpb24iOiIzb2tSbCIsInRva2VuIjoicDJNTHIifQ.qL_WXHqY01XWU6YnGGqQVtdXtU5Hf_GZuKnVFH3l2gc'
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1873197499 }}
           QODANA_ENDPOINT: 'https://qodana.cloud'
